--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -23,8 +23,28 @@ http:
   cors:
     enabled: ${HTTP_CORS_ENABLE}
     allow-origin: ${HTTP_CORS_ALLOW_ORIGIN}
+    allow-headers: X-Requested-With, Content-Type, Content-Length, Authorization
 
 discovery:
   zen:
     ping.unicast.hosts: ${DISCOVERY_SERVICE}
     minimum_master_nodes: ${NUMBER_OF_MASTERS}
+
+xpack.security.enabled: false
+xpack.monitoring.enabled: false
+xpack.graph.enabled: false
+xpack.watcher.enabled: false
+
+searchguard.authcz.admin_dn:
+  - CN=sgadmin
+searchguard.ssl.transport.keystore_filepath: keystore.jks
+searchguard.ssl.transport.keystore_password: 514e4edd5962c21a0402
+searchguard.ssl.transport.truststore_filepath: truststore.jks
+searchguard.ssl.transport.truststore_password: 5137bbec2b594ce379f4
+searchguard.ssl.transport.enforce_hostname_verification: false
+
+# searchguard.ssl.http.enabled: true
+# searchguard.ssl.http.keystore_filepath: keystore.jks
+# searchguard.ssl.http.keystore_password: 514e4edd5962c21a0402
+# searchguard.ssl.http.truststore_filepath: truststore.jks
+# searchguard.ssl.http.truststore_password: 5137bbec2b594ce379f4
